Fix focus styles on numbered contents list
Child spans are floated which creates a focus box around just the
number. Set parent link to inline-block (rather than inline) so that a
focus style covers the whole link.

--- a/app/assets/stylesheets/views/_html-publication.scss
+++ b/app/assets/stylesheets/views/_html-publication.scss
@@ -79,6 +79,16 @@
       a {
         text-decoration: none;
 
+        // Child spans are floated which creates a focus box around
+        // just the number. Set parent link to inline-block for
+        // correct appearance
+        display: inline-block;
+
+        // IE8 and below don't render inline-block correctly
+        @include ie-lte(8) {
+          display: block;
+        }
+
         &:hover {
           text-decoration: underline;
         }
